Upgrade Hibernate and added Woodstox and Aalto implementation for Stax2.